# wiggy

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASK_CREATION.md  pyproject.toml
.github/workflows/: docker.yml
.wiggy/: .gitignore
.wiggy/tasks/create-task/: prompt.md  task.yaml
.wiggy/tasks/debug/: prompt.md  task.yaml
.wiggy/tasks/docs/: prompt.md  task.yaml
.wiggy/tasks/implement/: prompt.md
.wiggy/tasks/orchestrator-finalize/: prompt.md  task.yaml
.wiggy/tasks/research/: prompt.md
.wiggy/tasks/review/: task.yaml
.wiggy/tasks/test/: prompt.md
.wiggy/templates/documentation/: content.md  template.yaml
.wiggy/templates/pr_description/: content.md
docker/base/: Dockerfile
docker/claude/: Dockerfile  entrypoint.sh
docs/prd/orchestrator/: overview.md
src/wiggy/: __init__.py  __main__.py  cli.py  monitor.py  runner.py
src/wiggy/config/: __init__.py  init.py  loader.py  preflight.py  schema.py  (+1 more)
tests/: __init__.py  test_artifacts.py  test_cli.py  test_compression.py  test_config.py  test_docker_executor.py  test_e2e_docker_mcp_artifact.py  test_engines.py  test_finalize_pr_body.py  test_git_operations.py  test_git_worktree.py  test_history.py  test_init_command.py  test_integration_docker_artifact.py  test_knowledge.py  test_mcp_integration.py  test_mcp_networking.py  test_mcp_server.py  test_mcp_tool_scoping.py  test_mcp_tools.py  test_orchestrator_decision.py  test_orchestrator_integration.py  test_parsers.py  test_pr_description.py  test_preflight.py  test_process_orchestrator.py  test_step_injection.py  test_task_cli.py  test_tasks.py
(+70 files in other folders)
